New swagger changes. Model changes. Migrations changes.
